--- a/public/index.html
+++ b/public/index.html
@@ -274,8 +274,8 @@
 			</article>
 				<div class="line"></div>
 				<article class="grid-right__article">
-					<div class="grid-left__wrap">
-						<span class="grid-left__num">цепочка 2</span>
+					<div class="grid-right__wrap">
+						<span class="grid-right__num">цепочка 2</span>
 					</div>
 					<div class="docListFull">
 						<div class="docListFull__docLine">
