--- a/public/index.html
+++ b/public/index.html
@@ -254,9 +254,9 @@
 			
 			<section class="grid-right" id="grid-right">
 				<article class="grid-right__article">
-				<div class="grid-left__wrap">
-					<h2 class="grid-left__title">Аккордовые последовательности</h2>
-					<span class="grid-left__num">ноты придется написать вам</span>
+				<div class="grid-right__wrap">
+					<h2 class="grid-right__title">Аккордовые последовательности</h2>
+					<span class="grid-right__num">ноты придется написать вам</span>
 				</div>
 				<div class="docListFull">
 					<div class="docListFull__docLine">
