--- a/public/index.html
+++ b/public/index.html
@@ -286,7 +286,7 @@
 						
 						<div class="music">
 							<audio controls>
-								<source src="img/цепочки/1.mp3">
+								<source src="img/цепочки/3/3.mp3">
 							</audio>
 						</div>
 					</div>
