--- a/public/index.html
+++ b/public/index.html
@@ -368,7 +368,46 @@
 								До мажор
 							</div>
 						</div>
-						
+						<div class="chord">
+							<h3 class="chord__title">Всего 5 аккордов.</h3>
+							<ol class="chord__list">
+								<li class="list__item">
+									T<sub>
+									5
+									<sub>3</sub>
+									в положении терции
+								</sub>
+								</li>
+								<li class="list__item">
+									S<sub>
+									5
+									<sub>3</sub>
+									в положении примы
+								</sub>
+								</li>
+								<li class="list__item">
+									T<sub>
+									5
+									<sub>3</sub>
+									в положении терции
+								</sub>
+								</li>
+								<li class="list__item">
+									D<sub>
+									5
+									<sub>3</sub>
+									в положении квинты
+								</sub>
+								</li>
+								<li class="list__item">
+									T<sub>
+									5
+									<sub>3</sub>
+									в положении примы
+								</sub>
+								</li>
+							</ol>
+						</div>
 						<div class="music">
 							<audio controls>
 								<source src="img/цепочки/1.mp3">
