--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<title>Развиваем музыкальный слух</title>
 	<meta property="og:locale" content="ru_RU">
 	<meta property="og:type" content="website">
+	<meta property="og:image" content="img/logo2.jpg">
 	<meta property="og:title" content="Развиваем музыкальный слух">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
 				integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
