--- a/public/index.html
+++ b/public/index.html
@@ -529,6 +529,46 @@
 					<div class="grid-right__wrap">
 						<span class="grid-right__num">цепочка 2</span>
 					</div>
+					<div class="chord">
+						<h3 class="chord__title">Всего 5 аккордов.</h3>
+						<ol class="chord__list">
+							<li class="list__item">
+								D<sub>
+								5
+								<sub>3</sub>
+								в положении квинты
+							</sub>
+							</li>
+							<li class="list__item">
+								T<sub>
+								5
+								<sub>3</sub>
+								в положении терция
+							</sub>
+							</li>
+							<li class="list__item">
+								S<sub>
+								5
+								<sub>3</sub>
+								в положении прима
+							</sub>
+							</li>
+							<li class="list__item">
+								D<sub>
+								5
+								<sub>3</sub>
+								в положении квинты
+							</sub>
+							</li>
+							<li class="list__item">
+								T<sub>
+								5
+								<sub>3</sub>
+								в положении примы
+							</sub>
+							</li>
+						</ol>
+					</div>
 					<div class="docListFull">
 						<div class="docListFull__docLine">
 							<div class="docListFull__key_1">
@@ -548,6 +588,53 @@
 				<div class="grid-right__wrap">
 					<span class="grid-right__num">цепочка 3</span>
 				</div>
+					<div class="chord">
+						<h3 class="chord__title">Всего 6 аккордов.</h3>
+						<ol class="chord__list">
+							<li class="list__item">
+								T<sub>
+								5
+								<sub>3</sub>
+								в положении терции
+							</sub>
+							</li>
+							<li class="list__item">
+								D<sub>
+								5
+								<sub>3</sub>
+								в положении квинты
+							</sub>
+							</li>
+							<li class="list__item">
+								T<sub>
+								5
+								<sub>3</sub>
+								в положении терции
+							</sub>
+							</li>
+							<li class="list__item">
+								S<sub>
+								5
+								<sub>3</sub>
+								в положении примы
+							</sub>
+							</li>
+							<li class="list__item">
+								D<sub>
+								5
+								<sub>3</sub>
+								в положении квинты
+							</sub>
+							</li>
+							<li class="list__item">
+								T<sub>
+								5
+								<sub>3</sub>
+								в положении терции
+							</sub>
+							</li>
+						</ol>
+					</div>
 				<div class="docListFull">
 					<div class="docListFull__docLine">
 						<div class="docListFull__key_1">
@@ -566,6 +653,60 @@
 				<article class="grid-right__article">
 					<div class="grid-right__wrap">
 						<span class="grid-right__num">цепочка 4</span>
+					</div>
+					<div class="chord">
+						<h3 class="chord__title">Всего 6 аккордов.</h3>
+						<ol class="chord__list">
+							<li class="list__item">
+								T<sub>
+								5
+								<sub>3</sub>
+								в положении терции
+							</sub>
+							</li>
+							<li class="list__item">
+								T<sub>
+								5
+								<sub>3</sub>
+								в положении квинты
+							</sub>
+							</li>
+							<li class="list__item">
+								D<sub>
+								5
+								<sub>3</sub>
+								в положении примы
+							</sub>
+							</li>
+							<li class="list__item">
+								D<sub>
+								5
+								<sub>3</sub>
+								в положении квинты
+							</sub>
+							</li>
+							<li class="list__item">
+								S<sub>
+								5
+								<sub>3</sub>
+								в положении терции
+							</sub>
+							</li>
+							<li class="list__item">
+								T<sub>
+								5
+								<sub>3</sub>
+								в положении терции
+							</sub>
+							</li>
+							<li class="list__item">
+								T<sub>
+								5
+								<sub>3</sub>
+								в положении примы
+							</sub>
+							</li>
+						</ol>
 					</div>
 					<div class="docListFull">
 						<div class="docListFull__docLine">
@@ -586,6 +727,67 @@
 			<article class="grid-right__article">
 				<div class="grid-right__wrap">
 					<span class="grid-right__num">цепочка 5</span>
+				</div>
+				<div class="chord">
+					<h3 class="chord__title">Всего 6 аккордов.</h3>
+					<ol class="chord__list">
+						<li class="list__item">
+							S<sub>
+							5
+							<sub>3</sub>
+							в положении квинты
+						</sub>
+						</li>
+						<li class="list__item">
+							D<sub>
+							5
+							<sub>3</sub>
+							в положении квинты
+						</sub>
+						</li>
+						<li class="list__item">
+							T<sub>
+							5
+							<sub>3</sub>
+							в положении примы
+						</sub>
+						</li>
+						<li class="list__item">
+							S<sub>
+							5
+							<sub>3</sub>
+							в положении квинты
+						</sub>
+						</li>
+						<li class="list__item">
+							S<sub>
+							5
+							<sub>3</sub>
+							в положении примы
+						</sub>
+						</li>
+						<li class="list__item">
+							T<sub>
+							5
+							<sub>3</sub>
+							в положении примы
+						</sub>
+						</li>
+						<li class="list__item">
+							S<sub>
+							5
+							<sub>3</sub>
+							в положении квинты
+						</sub>
+						</li>
+						<li class="list__item">
+							D<sub>
+							5
+							<sub>3</sub>
+							в положении квинты
+						</sub>
+						</li>
+					</ol>
 				</div>
 				<div class="docListFull">
 					<div class="docListFull__docLine">
